# dima_tech

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/dima_tech/application/: dto.py  exceptions.py
src/dima_tech/application/factories/: user.py
src/dima_tech/application/handlers/account/: me.py
src/dima_tech/application/handlers/auth/: login.py  me.py
src/dima_tech/application/handlers/payment/: me.py  process.py
src/dima_tech/application/handlers/user/: create_user.py  delete_user.py  get_all.py  update_user.py
src/dima_tech/application/ports/: __init__.py  clock.py  id_generator.py  idp.py  verifier.py
src/dima_tech/application/ports/gateways/: __init__.py  user.py
src/dima_tech/application/ports/repositories/: __init__.py  account.py  payment.py  session.py  user.py
src/dima_tech/bootstrap/: config.py  logging.py
src/dima_tech/bootstrap/entrypoints/: web.py
src/dima_tech/bootstrap/ioc/: __init__.py  application.py  context.py  database.py  infrastructure.py
src/dima_tech/domain/entities/: account.py  common.py  payment.py  session.py  user.py
src/dima_tech/infrastructure/adapters/: clock.py  hasher.py  id_generator.py  idp.py  verifier.py
src/dima_tech/infrastructure/persistence/adapters/: account_repository.py  payment_repository.py  session_repository.py  user_gateway.py  user_repository.py
src/dima_tech/infrastructure/persistence/migrations/: env.py
src/dima_tech/presentation/web/: exception_handler.py
src/dima_tech/presentation/web/routes/: __init__.py  (+6 more)
(+8 files in other folders)
