[project]
name = "dimatech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.10.1",
    "fastapi>=0.137.1",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
lint = [
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dima_tech"]

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/dima_tech/infrastructure/persistence/migrations/**.py"]
target-version = "py314"
preview = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"src/dima_tech/infrastructure/persistence/migrations/env.py" = ["ERA001", "INP001", "E402"]
"tests/**" = ["S101"]
